Fixed overflow visibility in player

--- a/src/app/less/player.less
+++ b/src/app/less/player.less
@@ -20,6 +20,13 @@ player {
     .player {
         padding-top: 70px;
         z-index:5;
+
+        .mCustomScrollBox {
+            overflow: visible;
+            .mCSB_container_wrapper {
+                overflow: visible;
+            }
+        }
     }
     md-content {
         background-color: transparent !important;
